Initial main page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MyNotes</title>
+    <meta name="description" content="MyNotes is a note taking website" />
   </head>
   <body>
     <div id="root"></div>
